5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1807_2566.log
== SUBMITION (2019-06-12 23:55:51) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.21348
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:55:56) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:58:18) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:58:23) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.9541
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:58:28) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:59:21) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:59:40) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.952002
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:59:51) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.21026
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:59:52) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
2.13495
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:00:05) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.835284
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:02:11) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:06:32) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.11293
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:06:35) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:07:04) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:12:58) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in range(falt):
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.19572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 4, in <module>
    for i in range(falt):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:40:56) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
	for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.623943
-- ERROR:
  File "/home/codebench/codes/1807/2566/main.py", line 18
    nvet[i] = round(nvet[i]/size(falt)*100,1)
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:59) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
	for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
File "XXXX", line 18
    nvet[i] = round(nvet[i]/size(falt)*100,1)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:32) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.00602
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:45) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.47303
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:45) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:45) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:49) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
2.02482
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:50) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.65777
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:51) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
4.71411
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:53) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
7.09862
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:53) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
8.56026
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:53) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:01) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
6.18713
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:01) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
5.19771
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:01) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
4.22001
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:02) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
3.51686
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:02) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
3.6794
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2566/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:17) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:47) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	if(falt[i]==3):
		nvet[1]=nvet[1]+1
	if(falt[i]==4):
		nvet[2]=nvet[2]+1
	if(falt[i]==5):
		nvet[3]=nvet[3]+1
	if(falt[i]==6):
		nvet[4]=nvet[4]+1
	if(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:51:26) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	elif(falt[i]==3):
		nvet[1]=nvet[1]+1
	elif(falt[i]==4):
		nvet[2]=nvet[2]+1
	elif(falt[i]==5):
		nvet[3]=nvet[3]+1
	elif(falt[i]==6):
		nvet[4]=nvet[4]+1
	elif(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.10967
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:35) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	elif(falt[i]==3):
		nvet[1]=nvet[1]+1
	elif(falt[i]==4):
		nvet[2]=nvet[2]+1
	elif(falt[i]==5):
		nvet[3]=nvet[3]+1
	elif(falt[i]==6):
		nvet[4]=nvet[4]+1
	elif(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:07) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	elif(falt[i]==3):
		nvet[1]=nvet[1]+1
	elif(falt[i]==4):
		nvet[2]=nvet[2]+1
	elif(falt[i]==5):
		nvet[3]=nvet[3]+1
	elif(falt[i]==6):
		nvet[4]=nvet[4]+1
	elif(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:55:27) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in range(falt):
	if(falt[i]==2):
		nvet[0]=nvet[0]+1
	elif(falt[i]==3):
		nvet[1]=nvet[1]+1
	elif(falt[i]==4):
		nvet[2]=nvet[2]+1
	elif(falt[i]==5):
		nvet[3]=nvet[3]+1
	elif(falt[i]==6):
		nvet[4]=nvet[4]+1
	elif(falt[i]==7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:57:02) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))
nvet = zeros(6)
for i in falt:
	if(falt[i] == 2):
		nvet[0]=nvet[0]+1
	elif(falt[i] == 3):
		nvet[1]=nvet[1]+1
	elif(falt[i] == 4):
		nvet[2]=nvet[2]+1
	elif(falt[i] == 5):
		nvet[3]=nvet[3]+1
	elif(falt[i] == 6 ):
		nvet[4]=nvet[4]+1
	elif(falt[i] == 7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
1.11884
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:36:41) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))

nvet = zeros(6)

for i in falt:
	if(falt[i] == 2):
		nvet[0]=nvet[0]+1
	elif(falt[i] == 3):
		nvet[1]=nvet[1]+1
	elif(falt[i] == 4):
		nvet[2]=nvet[2]+1
	elif(falt[i] == 5):
		nvet[3]=nvet[3]+1
	elif(falt[i] == 6 ):
		nvet[4]=nvet[4]+1
	elif(falt[i] == 7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.958568
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:01:13) 
-- CODE:
from numpy import * 
falt = array(eval(input("faltas na semana:")))

nvet = zeros(6)

for i in falt:
	if(falt[i] == 2):
		nvet[0]=nvet[0]+1
	elif(falt[i] == 3):
		nvet[1]=nvet[1]+1
	elif(falt[i] == 4):
		nvet[2]=nvet[2]+1
	elif(falt[i] == 5):
		nvet[3]=nvet[3]+1
	elif(falt[i] == 6 ):
		nvet[4]=nvet[4]+1
	elif(falt[i] == 7):
		nvet[5]=nvet[5]+1
for i in range(0,size(nvet)):
	nvet[i] = round(nvet[i]/size(falt)*100,1)
print(nvet)
	  
-- EXECUTION TIME:
0.973624
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
faltas na semana:[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas na semana:[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas na semana:[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:01:55) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,1)
	
print(a)

	  
-- EXECUTION TIME:
0.797191
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
